--- a/client/styles.scss
+++ b/client/styles.scss
@@ -20,6 +20,8 @@
 
 @import 'node_modules/bootstrap/scss/button-group';
 
+@import 'node_modules/bootstrap/scss/tooltip';
+
 /*
     Horizontal layout for large screens, vertical otherwise
 */
@@ -37,13 +39,27 @@
 /*
     For colour picker controls
 */
-.colour-picker .react-colorful__saturation {
-    border-radius: 0.23rem 0.23rem 0 0;
-    box-shadow: none;
+
+/* Small */
+.colour-picker .react-colorful {
+    width: 8rem;
+    height: 8rem;
+
+    padding: 0.3rem;
+    border-radius: 0.2rem;
+    border: 1px solid #555555;
 }
 
-.colour-picker .react-colorful__last-control {
-    border-radius: 0 0 0.23rem 0.23rem;
+.colour-picker .react-colorful__hue {
+    height: 1rem;
+
+    border-radius: 0.2rem;
+    margin-top: 0.3rem;
+}
+
+.colour-picker .react-colorful__saturation {
+    border-radius: 0.2rem;
+    border: none;
 }
 
 /*
