--- a/client/styles.scss
+++ b/client/styles.scss
@@ -36,8 +36,20 @@
     }
 }
 
-.card:hover {
-    border: 1px solid red;
+/*
+    Use if we want hilighted cards
+*/
+
+// .card:hover {
+//     border: 1px solid $link-hover-color;
+
+//     img {
+//         border-bottom: 1px solid $link-hover-color !important;
+//     }
+// }
+
+.nav-link-small {
+    padding: 0.15rem 0.4rem;
 }
 
 /*
